--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,17 +60,18 @@ jobs:
           cp python-backend/dist/python-analyzer src-tauri/binaries/python-analyzer-x86_64-unknown-linux-gnu
           chmod +x src-tauri/binaries/python-analyzer-x86_64-unknown-linux-gnu
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
 
       - name: Build frontend
-        working-directory: frontend
         run: npm run build
 
       - name: Build Tauri app
-        working-directory: frontend
-        run: npm run tauri build
+        run: npm run tauri:build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -117,17 +118,18 @@ jobs:
           New-Item -ItemType Directory -Force -Path src-tauri\binaries
           Copy-Item python-backend\dist\python-analyzer.exe src-tauri\binaries\python-analyzer-x86_64-pc-windows-msvc.exe
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
 
       - name: Build frontend
-        working-directory: frontend
         run: npm run build
 
       - name: Build Tauri app
-        working-directory: frontend
-        run: npm run tauri build
+        run: npm run tauri:build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -175,17 +177,18 @@ jobs:
           cp python-backend/dist/python-analyzer src-tauri/binaries/python-analyzer-x86_64-apple-darwin
           chmod +x src-tauri/binaries/python-analyzer-x86_64-apple-darwin
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
 
       - name: Build frontend
-        working-directory: frontend
         run: npm run build
 
       - name: Build Tauri app
-        working-directory: frontend
-        run: npm run tauri build
+        run: npm run tauri:build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
