fix: frontend/distをsrc-tauri/distにコピーしてからビルド

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,9 @@ jobs:
       - name: Build frontend
         run: npm run build
 
+      - name: Copy frontend build to src-tauri
+        run: cp -r frontend/dist src-tauri/dist
+
       - name: Build Tauri app
         run: npm run tauri:build
 
@@ -121,6 +124,9 @@ jobs:
 
       - name: Build frontend
         run: npm run build
+
+      - name: Copy frontend build to src-tauri
+        run: Copy-Item -Recurse frontend\dist src-tauri\dist
 
       - name: Build Tauri app
         run: npm run tauri:build
@@ -177,6 +183,9 @@ jobs:
 
       - name: Build frontend
         run: npm run build
+
+      - name: Copy frontend build to src-tauri
+        run: cp -r frontend/dist src-tauri/dist
 
       - name: Build Tauri app
         run: npm run tauri:build
