--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "dev": "cd frontend && npm run dev",
     "build": "cd frontend && npm run build",
-    "tauri": "cd frontend && npm run tauri",
-    "tauri:dev": "cd frontend && npm run tauri dev",
-    "tauri:build": "cd frontend && npm run tauri build"
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^2.9.2"
   }
 }
