--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -63,6 +66,12 @@ jobs:
           cp python-backend/dist/python-analyzer src-tauri/binaries/python-analyzer-x86_64-unknown-linux-gnu
           chmod +x src-tauri/binaries/python-analyzer-x86_64-unknown-linux-gnu
 
+      - name: Verify symlink
+        run: |
+          ls -la frontend/src-tauri
+          test -L frontend/src-tauri || ln -s ../src-tauri frontend/src-tauri
+          ls -la frontend/src-tauri
+
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
@@ -87,6 +96,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -145,6 +157,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -176,6 +191,12 @@ jobs:
           mkdir -p src-tauri/binaries
           cp python-backend/dist/python-analyzer src-tauri/binaries/python-analyzer-x86_64-apple-darwin
           chmod +x src-tauri/binaries/python-analyzer-x86_64-apple-darwin
+
+      - name: Verify symlink
+        run: |
+          ls -la frontend/src-tauri
+          test -L frontend/src-tauri || ln -s ../src-tauri frontend/src-tauri
+          ls -la frontend/src-tauri
 
       - name: Install frontend dependencies
         working-directory: frontend
