--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,6 +132,13 @@ jobs:
           New-Item -ItemType Directory -Force -Path src-tauri\binaries
           Copy-Item python-backend\dist\python-analyzer.exe src-tauri\binaries\python-analyzer-x86_64-pc-windows-msvc.exe
 
+      - name: Verify symlink
+        run: |
+          if (!(Test-Path frontend\src-tauri)) {
+            New-Item -ItemType SymbolicLink -Path frontend\src-tauri -Target src-tauri
+          }
+          Get-Item frontend\src-tauri
+
       - name: Install frontend dependencies
         working-directory: frontend
         run: npm ci
