fix: Windows用にfrontendDistパスを自動調整（試行22回目）
- ディレクトリコピー後、tauri.conf.jsonのfrontendDistを相対パス修正
- frontend/src-tauri/から見た正しいパス「../dist」に変更
- Linux/macOSはシンボリンクで動作、Windowsはコピー+パス調整で動作

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,6 +146,12 @@ jobs:
           }
           Copy-Item -Recurse src-tauri frontend\src-tauri
 
+      - name: Fix frontendDist path for Windows
+        run: |
+          $config = Get-Content frontend\src-tauri\tauri.conf.json | ConvertFrom-Json
+          $config.build.frontendDist = "../dist"
+          $config | ConvertTo-Json -Depth 10 | Set-Content frontend\src-tauri\tauri.conf.json
+
       - name: Build Tauri app
         run: npm run tauri:build
 
