fix: GitHub Releaseへのファイルアップロードパスを修正
- 再帰的パターン (**/*.deb など) を使用
- artifact のディレクトリ構造に対応
- .deb, .rpm, .AppImage, .msi, .exe, .dmg を正しくアップロード

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -243,9 +243,12 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            linux-builds/*
-            windows-builds/*
-            macos-builds/*
+            linux-builds/**/*.deb
+            linux-builds/**/*.rpm
+            linux-builds/**/*.AppImage
+            windows-builds/**/*.msi
+            windows-builds/**/*.exe
+            macos-builds/**/*.dmg
           draft: false
           prerelease: true
         env:
