fix: externalBinの正しい命名規則に従う
問題:
- TauriのexternalBinはプラットフォーム固有のサフィックスを期待
- Windowsでは python-analyzer-x86_64-pc-windows-msvc.exe が必要

修正:
1. GitHub Actionsで正しいファイル名でコピー
2. resourcesを削除（externalBinのみ使用）
3. Rustコードでも正しいファイル名を探す

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -130,7 +130,7 @@ jobs:
       - name: Copy Python binary to Tauri binaries
         run: |
           New-Item -ItemType Directory -Force -Path src-tauri\binaries
-          Copy-Item python-backend\dist\python-analyzer.exe src-tauri\binaries\python-analyzer.exe
+          Copy-Item python-backend\dist\python-analyzer.exe src-tauri\binaries\python-analyzer-x86_64-pc-windows-msvc.exe
 
       - name: Install frontend dependencies
         working-directory: frontend
