fix: Add clean step to Windows Python build to prevent cache issues

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,6 +125,7 @@ jobs:
       - name: Build Python Analyzer
         run: |
           cd python-backend
+          Remove-Item -Recurse -Force dist, build -ErrorAction SilentlyContinue
           pyinstaller python-analyzer.spec
           dir dist\
 
